- fix rough scroll on ios browsers

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ body {
 	max-height: 100%;
 	display: block;
 	position: relative;
+	-webkit-overflow-scrolling: touch;
 }
 
 h1 {
